<resources>
    <string name="app_name">Vending Machine</string>

    <string name="title_app">Arthurs Vending Machine</string>
    <string name="action_settings">Open Machine settings</string>
    <string name="title_activity_vending"> Arthurs Vending Machine</string>
    <string name="configuration">Stock</string>
    <string name="restock">Restock</string>
    <string name="exit">Exit</string>
    <string name="menu_about">about me...</string>
    <string name="aboout">Developer Arthur Rocha</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="action_money">Insert Coin</string>
    <string name="balance_info">Balance</string>
    <string name="str_cent5">$0.05</string>
    <string name="str_cent10">$0.10</string>
    <string name="str_cent25">$0.25</string>
    <string name="str_dolar1">$1.00</string>
    <string name="str_dolar2">$2.00</string>
    <string name="str_dolar5">$5.00</string>
    <string name="new_order">Selling product</string>
    <string name="new_balance">new balance</string>
    <string name="ok_button">OK</string>
    <string name="change">your change</string>
    <string name="error_selling">Can not sell this product</string>
    <string name="title_activity_screen_slide">ScreenSlideActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
