<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:paddingBottom="20dp"
            android:background="@drawable/order_background"
            android:orientation="vertical">

            <!--Titulo-->
            <TextView
                android:id="@+id/dialog_new_order_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/order_title"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:text="@string/new_order"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">




                <!--new balance info-->

                <TextView
                    android:id="@+id/new_balance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:padding="3dip"
                    android:lineSpacingExtra="6dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#333333"
                    android:text="@string/new_balance"
                    />

                <TextView
                    android:id="@+id/new_balance_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="0dp"
                    android:padding="3dip"
                    android:paddingLeft="10dp"
                    android:paddingRight="15dp"
                    android:lineSpacingExtra="6dp"
                    android:textSize="14sp"
                    android:textColor="#333333"/>

            </LinearLayout>






            <!--Separador-->
            <ImageView
                android:src="@android:drawable/divider_horizontal_textfield"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:weightSum="1">




                <!--new balance info-->

                <TextView
                    android:id="@+id/return_money_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:padding="3dip"
                    android:lineSpacingExtra="6dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#333333"
                    android:text="@string/change"
                    android:layout_weight="0.14" />

                <TextView
                    android:id="@+id/return_money_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="0dp"
                    android:padding="3dip"
                    android:paddingLeft="10dp"
                    android:paddingRight="15dp"
                    android:lineSpacingExtra="6dp"
                    android:textSize="14sp"
                    android:textColor="#333333"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">
                <!--Boton de OK-->
                <Button
                    android:id="@+id/button_new_order_ok"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_background"
                    android:text="@string/ok_button"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="50dp"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>